<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:theme="@style/DetailTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/photo_placeholder">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll"
            android:background="@color/photo_placeholder"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v7.widget.Toolbar>

            <android.support.v4.view.ViewPager
                android:id="@+id/photo_viewpager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/back_button"
                android:layout_marginStart="@dimen/back_button_margin_start"
                android:layout_marginTop="@dimen/back_button_margin_top"
                app:layout_collapseMode="parallax"
                android:src="@drawable/back_button_white"
                android:onClick="backButtonOnClick"
                android:layout_gravity="top|start"
                android:contentDescription="@string/back_content_description"/>

            <ImageView
                android:id="@+id/up_arrow"
                android:layout_width="@dimen/arrow_size"
                android:layout_height="@dimen/arrow_size"
                android:layout_gravity="center_horizontal|bottom"
                app:layout_collapseMode="parallax"
                android:src="@drawable/ic_keyboard_arrow_up_black_24dp"
                android:contentDescription="@string/up_content_description"/>

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/indicator"
                android:layout_gravity="top|center_horizontal"
                app:layout_collapseMode="parallax"
                android:layout_marginTop="@dimen/circle_indicator_margin_top"
                android:layout_width="match_parent"
                android:layout_height="48dp"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/details_scroll_view"
        app:layout_scrollFlags="scroll"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/text_color_white"
            android:paddingBottom="@dimen/scrollview_padding_bottom"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/title_bar_padding_bottom"
                android:paddingTop="@dimen/title_bar_padding_top"
                android:orientation="vertical"
                android:background="@color/title_bar_color">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color_white"
                    android:textSize="@dimen/title_font_size"
                    android:gravity="center"
                    android:id="@+id/detailTitle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/date_margin_top"
                    android:textColor="@color/text_color_white"
                    android:textSize="@dimen/date_font_size"
                    android:gravity="center"
                    android:id="@+id/detailDate" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/wallpaper_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/wallpaper_button_margin_end"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/wallpaper_content_description"
                        android:src="@drawable/ic_poll_black_24dp"/>

                    <ImageButton
                        android:id="@+id/share_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/share_button_margin_end"
                        android:contentDescription="@string/share_content_description"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_share_black_24dp"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/people"
                style="@style/detail_header"/>

            <TextView
                android:id="@+id/people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/sub_detail_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_period"
                style="@style/detail_header"/>

            <TextView
                android:id="@+id/time_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/sub_detail_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/culture"
                style="@style/detail_header"/>

            <TextView
                android:id="@+id/culture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/sub_detail_header" />

            <View
                android:background="@color/detail_line"
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/description_header"
                android:text="@string/description"
                android:visibility="gone"
                style="@style/detail_header"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                style="@style/sub_detail_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classification"
                style="@style/detail_header"/>

            <TextView
                android:id="@+id/classification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/sub_detail_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                style="@style/detail_header"/>

            <TextView
                android:id="@+id/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/sub_detail_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/technique"
                style="@style/detail_header"/>

            <TextView
                android:id="@+id/technique"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/sub_detail_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"
                style="@style/detail_header"/>

            <TextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/sub_detail_header" />

            <View
                android:background="@color/detail_line"
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginTop="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_info"
                android:layout_gravity="center"
                android:id="@+id/more_info_button"
                style="?android:attr/buttonBarButtonStyle" />

            <TextView
                android:id="@+id/credit"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/credit_font_size"
                style="@style/sub_detail_header" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favorite_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite_border_black_24dp"
        android:contentDescription="@string/action_fav"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:rippleColor="@color/colorPrimary"
        android:layout_gravity="bottom|end"
        style="@style/floating_action_button"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>
